# escape-game

./: .gitignore  README.md
haskell/: Makefile  adventure  adventure.hi  escape-game.cabal  escape.hs  example_fast_run.txt  locks.hs
haskell/places/: places  places.hi  places.hs
haskell/src/: Main.hs
haskell/src/Core/: Command.hs  CommandHandler.hs  CommandParser.hs
haskell/src/Feature/: Combine.hs  EnterCode.hs  Examine.hs  Inventory.hs  ItemAt.hs  Look.hs  Moving.hs  Path.hs  Subplace.hs  Use.hs
haskell/src/MapEventHandler/: OnArrival.hs  OnCombine.hs  OnEnterCode.hs  OnExamine.hs  OnUse.hs
haskell/src/Object/: Item.hs  Lock.hs  Place.hs
haskell/src/Relation/: ItemAt.hs
haskell/src/State/: GameState.hs  Util.hs
haskell/src/Util/: IO.hs
prolog/: Makefile  main.pl
prolog/descriptions/: descriptions.pl
prolog/map/: codes.pl  combine_items.pl  descriptions.pl  details.pl  items.pl  on_arrival.pl  paths.pl  subplaces.pl  usable_items.pl
prolog/rules/: interaction.pl  inventory.pl  item_assembly.pl  moving.pl  secret_code.pl  use.pl
prolog/story_lines/: descriptions.pl  details.pl
