cabal-version:      2.4
name:               escape-game
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:

executable escape-game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Core.Command
                   Core.CommandHandler
                   Core.CommandParser
                   MapEventHandler.OnArrival
                   MapEventHandler.OnCombine
                   MapEventHandler.OnEnterCode
                   MapEventHandler.OnExamine
                   MapEventHandler.OnUse
                   Object.Item
                   Object.Place
                   Feature.Inventory
                   Feature.ItemAt
                   Feature.Path
                   Feature.Subplace
                   Feature.Examine
                   Feature.Moving
                   State.GameState
                   State.Util
                   Util.IO

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13.0.0, containers >= 0.6
    hs-source-dirs:   src
    default-language: Haskell2010
